# stale-magic

./: .gitignore  README.md  pyproject.toml
src/stale_magic/: __init__.py  magic.py
