[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stale-magic"
version = "0.1.0"
description = "Makefile-like Jupyter cell magic with dependency tracking and output-preserving skips"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Vittore Scolari" }]

dependencies = [
  "ipython>=8",
]

classifiers = [
  "Framework :: IPython",
  "Framework :: Jupyter",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/scovit/stale-magic"
Repository = "https://github.com/scovit/stale-magic"
Issues = "https://github.com/scovit/stale-magic/issues"

[project.entry-points."ipython_extension"]
stale_magic = "stale_magic.magic"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
